--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@figma/my-make-file",
+  "name": "Gaurav Jadhav Portfolio",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -41,10 +41,15 @@
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
+    "@react-email/components": "^1.0.1",
+    "@react-email/render": "^2.0.0",
+    "@types/dagre": "^0.7.53",
+    "@xyflow/react": "^12.10.0",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
+    "dagre": "^0.8.5",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
@@ -61,6 +66,7 @@
     "react-responsive-masonry": "2.7.1",
     "react-slick": "0.31.0",
     "recharts": "2.15.2",
+    "resend": "^6.6.0",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
