--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "motion": "12.23.24",
     "next": "14.2.14",
     "next-themes": "0.4.6",
+    "nodemailer": "^7.0.11",
     "react-day-picker": "8.10.1",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@types/node": "20.16.5",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "18.3.9",
     "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
